[metadata]
name = tf-semiseg-dataloader
version = 0.0.2
author = SandroRybarik
author_email = rybarik@fisherio.com
description = Custom dataloader for semiseg segmentation dataset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SandroRybarik/tf-semiseg-dataloader
project_urls =
    Bug Tracker = https://github.com/SandroRybarik/tf-semiseg-dataloader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src